<resources>
    <string name="app_name">Get My Notes</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_sign_in_to_continue">Please Sign in to Continue</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_code">Co\nde</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_a_user">Already a user?</string>
    <string name="forgot_msg">Provide your account\'s email for which you want to reset your password</string>
    <string name="continue_msg">Continue</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="please_enter_otp_sent_on">Please Enter OTP sent on</string>
    <string name="support_mail_com">support@mail.com</string>
    <string name="verify">Verify</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hi">Hi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name">Course Name</string>
    <string name="university_collage_name">University/Collage Name</string>
    <string name="want_to_change_password">Want to Change Password?</string>
    <string name="click_here">Click Here.</string>
    <string name="log_out">Log Out</string>
    <string name="update">Update Profile</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="admin_example_com">admin@example.com</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="add_subject">+Add Subject</string>
    <string name="add_subject_1">Add Subject</string>
    <string name="subject_name">Subject Name</string>
    <string name="submit">Submit</string>
    <string name="search_courses">Search Subjects</string>
    <string name="all_courses">All Subjects</string>
    <string name="add_pdf">Add Pdf</string>
    <string name="topic_name">Topic Name</string>
    <string name="select_subject">Select Subject</string>
    <string name="upload_pdf">Upload Pdf</string>
    <string name="subjects">Subjects</string>
    <string name="categories">Categories</string>
    <string name="_13mb">0MB</string>
    <string name="date_string">dd/MM/yyyy</string>
    <string name="update_pdf">Update Pdf</string>
    <string name="n_a">N/a</string>
    <string name="back_button">Back Button</string>
    <string name="new_user_name">New User Name</string>
    <string name="update_info">Update Info</string>
    <string name="please_wait">Please Wait...</string>
    <string name="add_pdf_button">Add Pdf Button</string>
    <string name="button_download">button Download</string>
    <string name="total_downloads">Downloads</string>
    <string name="total_views">Views</string>
    <string name="_0">0</string>
    <string name="button_to_read_the_current_pdf">Button To read the current PDF</string>
    <string name="pdf_name">PDF Name</string>
    <string name="downloading_file">Downloading file...</string>
    <string name="cancel">Cancel</string>
    <string name="button_dexcription">Back Button</string>
    <string name="select_pdf_button">Select Pdf Button</string>
    <string name="want_to_send_your_notes">Want to Send your Notes?</string>
    <string name="contact_us">Contact Us</string>
    <string name="mail_us_your_notes_on">Mail us Your Notes on :</string>
    <string name="shabaj_mail">shabajansari843@gmail.com</string>
    <string name="or">OR</string>
    <string name="tiwsonu58_gmail_com">tiwsonu58@gmail.com</string>
</resources>