<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginBottom="5dp"
    android:background="@color/home"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal"
       android:background="@color/white"
       android:layout_gravity="center_vertical">

       <ImageView
           android:id="@+id/pdf_imageView"
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:layout_margin="10dp"
           android:layout_gravity="center_vertical"
           android:src="@drawable/ic_pdf"/>

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <TextView
               android:id="@+id/pdf_topic_name_tv"
               style="@style/TextAppearance.MaterialComponents.Headline6"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:text="@string/topic_name"
               android:textAlignment="textStart"
               android:textAllCaps="false"
               android:textColor="@color/black"
               android:textSize="20sp"
               app:layout_constraintEnd_toStartOf="@+id/btn_more"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <TextView
               android:id="@+id/sizeTv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:maxLines="1"
               android:padding="5dp"
               android:text="@string/_13mb"
               android:textColor="@color/home"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent"/>


           <TextView
               android:id="@+id/dateTv"
               android:layout_width="90dp"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:padding="5dp"
               android:text="@string/date_string"
               android:textColor="@color/home"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent" />

           <ImageButton
               android:id="@+id/btn_more"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:layout_marginEnd="10dp"
               android:background="@color/transparent"
               android:padding="5dp"
               android:src="@drawable/ic_more"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>

   </LinearLayout>


</androidx.cardview.widget.CardView>